[package]
name = "ten_atcoder_problems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.io_atcoder]
path = "../io_atcoder"

[dependencies]
proconio = "0.3.6"

[[bin]]
name = "main1"
path = "src/main1.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"

[[bin]]
name = "main3"
path = "src/main3.rs"

[[bin]]
name = "main4"
path = "src/main4.rs"

[[bin]]
name = "main5"
path = "src/main5.rs"

[[bin]]
name = "main6"
path = "src/main6.rs"

[[bin]]
name = "main7"
path = "src/main7.rs"

[[bin]]
name = "main8"
path = "src/main8.rs"

[[bin]]
name = "main9"
path = "src/main9.rs"

[[bin]]
name = "main10"
path = "src/main10.rs"